# PicoW-BLE-Terminal

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
bootloader/: CMakeLists.txt  main.c
docs/: ROADMAP.md  SPEC.md
include/: btstack_config.h  lwipopts.h  ota_metadata.h
linker/: memmap_app_slot_b.ld  memmap_bootloader.ld
picow-ota/: CMakeLists.txt  README.md
picow-ota/bootloader/: CMakeLists.txt  main.c
picow-ota/include/pico_ota/: crc32.h  log.h  metadata.h  ota.h  sha256.h
picow-ota/linker/: memmap_app_slot_a.ld
picow-ota/src/: crc32.c  log_default.c  ota.c  sha256.c
src/: main.c
src/ble/: ble_nus.c  ble_nus.h  nus.gatt
src/cli/: cli.c  cli.h  command.c  command.h  duration.c  duration.h  parser.c  parser.h  shell_state.c  shell_state.h
src/cli/commands/: cmd_adc.c  cmd_bind.c  cmd_bindings.c  cmd_clear.c  cmd_echo.c  cmd_env.c  cmd_gpio.c  cmd_help.c  cmd_i2c.c  cmd_if.c  cmd_net.c  cmd_ota.c  cmd_pwm.c  cmd_reboot.c  cmd_repeat.c  cmd_run.c  cmd_script.c  cmd_set.c  cmd_sleep.c  cmd_system.c  cmd_temp.c  cmd_unbind.c  cmd_unset.c  cmd_uptime.c  cmd_version.c  cmd_while.c  cmd_wifi.c
src/drivers/: adc_ctrl.c  adc_ctrl.h  gpio_ctrl.c  gpio_ctrl.h  i2c_ctrl.c  i2c_ctrl.h  pwm_ctrl.c  pwm_ctrl.h  temp_sensor.c  temp_sensor.h
src/network/: http_get.c  http_get.h  wifi.c  wifi.h
src/ota/: ota.c  ota.h
src/storage/: config.c  config.h  scripts.c  scripts.h
src/system/: bindings.c  bindings.h  log.c  log.h  sha256.c  sha256.h  sysinfo.c  sysinfo.h  uptime.c  uptime.h  vars.c  vars.h  version.h
